--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Fridokind/Fridokind.github.io.git/",
+  "homepage": "https://Fridokind.github.io/my-potfolio",
   "name": "my-potfolio",
   "version": "0.1.0",
   "private": true,
